# pyloto_corp

./: .coverage  .dockerignore  .env.clean  .env.exemplo  .gitignore  A1_DECISION_AND_RESOLUTION.md  A1_DEDUPE_REFACTOR_INVENTORY.txt  ARQUIVOS_MODIFICADOS.md  AUDITORIA_DADOS.json  COBERTURA_PROGRESSO.md  DEBUG_INBOUND.md  DEPLOYMENT_STAGING.md  Dockerfile  FASE_1_2_COMPLETADA.md  Funcionamento.md  Funcionamento_Interface(Futura).md  GUIA_LEITURA_AUDITORIA.md  INDICE_AUDITORIA.md  LIMPEZA_REPOSITORIO_29JAN.txt  Monitoramento_Regras-Padroes.md  Observacoes_Sprint1-2.md  PHASE_2_COMPLETION.md  PRODUCAO_FINAL_STRATEGY.md  QUICKSTART_DEPLOY.sh  QUICK_START_FSM_LLM.md  README.md  RELATORIO_AUDITORIA_COMPLETO.md  RELATORIO_TESTES_WHATSAPP_API.md  RESUMO_EXECUCAO_C2.md  RESUMO_IMPLEMENTACAO_FASE5.md  Roadmap-producao.md  Sprint_1-2_Auditoria.md  Sprint_3-4_Auditoria.md  Sprint_5_Auditoria.md  TODO_00_MASTER_INDEX.md  TODO_01_INFRAESTRUTURA_E_SERVICOS.md  TODO_02_REFATORA_VALIDADORES_OUTBOUND.md  TODO_03_PERSISTENCIA_SESSAO_PIPELINE.md  TODO_04_FLOWS_TESTES_OBSERVABILIDADE.md  TODO_05_DEPLOY_E_POS_DEPLOY.md  (+5 more)
.github/workflows/: ci.yml
deploy/: cloudrun.yaml
docs/: ARCH_RESPONSE_GENERATOR.md  ARCH_STATE_SELECTOR.md  ARCH_WHATSAPP_ASYNC.md  AUDITORIA_PROFUNDA_29JAN_2026.md  Analise_repo.md  ENTREGA_AUDITORIA_29JAN_2026.md  ESTRUTURA_FINAL.txt  FASE_3C_COMMITS_1_2_3.md  INDEX_DELIVERABLES.md  INDICE_AUDITORIA_FINAL_29JAN.md  INDICE_DOCS.md  LLM_PIPELINE.md  OPENAI_API_SECRET_MANAGER_SETUP.md  README_AUDITORIA_29JAN.md  ROADMAP_EXECUCAO_AUDITORIA.md  SUMARIO_EXECUTIVO_AUDITORIA_29JAN.md  ai_knowledge.md  api-migration.md  contracts.md  coverage_baseline.md  governanca_qualidade.md  hitórico_Executor.md  prompt_template.md  security.md
docs/auditoria/: A4_FLOOD_DETECTION_IMPLEMENTATION.md  AUDITORIA_CONFORMIDADE_REGRAS.md  AUDITORIA_SUMARIO.md  GUIA_LEITURA_AUDITORIA.md  INDICE_AUDITORIA.md  README.md  RELATORIO_AUDITORIA_COMPLETO.md
docs/firestore/: schema.md
docs/implementacao/: FASE_3A_3B_COMPLETADA.md  GUARDIAO_REFATORACOES_25JAN.md  IMPLEMENTACAO_PIPELINE_ASYNC.md  RESUMO_EXECUCAO_C1.md  RESUMO_EXECUCAO_C3.md
scripts/: check.sh  check_startup_errors.sh  test_inbound_flow.py
temp_docs_txt/: doc2.txt  flows.txt  general_doc.txt
tests/: README.md  conftest.py  conftest_queue.py  test_domain_fsm.py  test_fsm_engine_phase1.py  test_infra_message_queue.py  test_llm_pipeline_e2e.py
(+297 files in other folders)
